<resources>
    <string name="app_name">FingerCaptureDemo</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <string name="action_deregister">Deregister Device</string>
    <string name="please_wait">Please wait…</string>


    <string name="take_photo">Capture palm</string>
    <string name="enter_your_name">Enter the subject name or id </string>
    <string name="use_liveness_detector">use liveness detector</string>
    <string name="show_finger_ellipses">show finger ellipses</string>
    <string name="create_templates">create templates</string>
    <string name="orientation_check">orientation check</string>
    <string name="save_sdk_log">save SDK log</string>
    <string name="prop_denoise">proprietary denoise</string>
    <string name="index_finger">index</string>
    <string name="middle_finger">middle</string>
    <string name="ring_finger">ring</string>
    <string name="little_finger">little</string>
    <string name="slap_fingers">Slap fingers</string>
    <string name="detector_threshold">Detector threshold</string>
    <string name="little_finger_liveness">Little Finger Quality Threshold</string>
    <string name="ring_finger_liveness">Ring Finger Quality Threshold</string>
    <string name="liveness_threshold">Liveness threshold</string>
    <string name="quality_threshold">Other Fingers Quality Threshold</string>

    <string name="clean_fingerprints">clean fingerprints</string>
    <string name="capture_speed">Capture speed</string>
    <string name="low_speed">low</string>
    <string name="normal_speed">normal</string>
    <string name="high_speed">high</string>
    <string name="capture_env">Capture env.</string>
    <string name="inside_env">inside</string>
    <string name="outside_env">outside</string>
    <string name="save_fingerprints">save fingerprints</string>
    <string-array name="fingers">
        <item>left slap</item>
        <item>right slap</item>
        <item>left thumb</item>
        <item>right thumb</item>
        <item>thumbs</item>
        <item>left index</item>
        <item>right index</item>
        <item>left index and middle</item>
        <item>right index and middle</item>
        <item>left ring and little</item>
        <item>right ring and little</item>
        <item>left lower palm</item>
        <item>right lower palm</item>
    </string-array>

    <string name="very_slow">Very slow</string>
    <string name="slow">Slow</string>
    <string name="medium">Medium</string>
    <string name="fast">Fast</string>
    <string name="very_fast">Very Fast</string>
    <string-array name="zoom_ratios_array">
        <item>1.25</item>
        <item>1.5</item>
        <item>1.75</item>
        <item>2</item>
        <item>2.25</item>
        <item>2.5</item>
    </string-array>


</resources>