<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:clipToPadding="false"
    android:paddingBottom="80dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <CheckBox
            android:id="@+id/livenessCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:checked="true"
            android:text="@string/use_liveness_detector"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/showEllipsesCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:checked="true"
            android:text="@string/show_finger_ellipses"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/livenessCheckBox" />

        <CheckBox
            android:id="@+id/saveSdkLogCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:checked="false"
            android:text="@string/save_sdk_log"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/showEllipsesCheckBox" />

        <CheckBox
            android:id="@+id/proprietaryDenoiseCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:checked="true"
            android:text="@string/prop_denoise"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/saveSdkLogCheckBox" />

        <CheckBox
            android:id="@+id/cleanFingerprintsCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:checked="false"
            android:text="@string/clean_fingerprints"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/proprietaryDenoiseCheckBox" />

        <CheckBox
            android:id="@+id/get_quality_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="Quality"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cleanFingerprintsCheckBox" />

        <CheckBox
            android:id="@+id/get_nfiq2_quality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="NFIQ2 Quality"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/get_quality_checkbox" />

        <CheckBox
            android:id="@+id/get_finger_reversed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Finger Reversed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/get_nfiq2_quality" />

        <TextView
            android:id="@+id/captureSpeedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/capture_speed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/get_finger_reversed" />

        <RadioGroup
            android:id="@+id/captureSpeedRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/captureSpeedTextView">

            <RadioButton
                android:id="@+id/veryslowSpeedRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/very_slow" />

            <RadioButton
                android:id="@+id/slowSpeedRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/slow" />

            <RadioButton
                android:id="@+id/mediumSpeedRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/medium" />

            <RadioButton
                android:id="@+id/fastSpeedRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fast" />

            <RadioButton
                android:id="@+id/veryfastSpeedRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/very_fast" />

        </RadioGroup>

        <TextView
            android:id="@+id/captureModeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Capture Mode"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/captureSpeedRadioGroup" />

        <RadioGroup
            android:id="@+id/rad_group_cap_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/captureModeTextView">

            <RadioButton
                android:id="@+id/rad_btn_cap_mode_self"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="Self" />

            <RadioButton
                android:id="@+id/rad_btn_cap_mode_oprtr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Operator" />

        </RadioGroup>

        <TextView
            android:id="@+id/livenessThresholdTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/liveness_threshold"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rad_group_cap_mode" />

        <EditText
            android:id="@+id/livenessThresholdEditText"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/livenessThresholdTextView" />

        <TextView
            android:id="@+id/qualityThresholdTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/quality_threshold"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/livenessThresholdEditText" />

        <EditText
            android:id="@+id/qualityThresholdEditText"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/qualityThresholdTextView" />

        <TextView
            android:id="@+id/ringfingerThresholdTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/ring_finger_liveness"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/qualityThresholdEditText" />

        <EditText
            android:id="@+id/ringfingerThresholdEditText"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ringfingerThresholdTextView" />

        <TextView
            android:id="@+id/littlefingerThresholdTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/little_finger_liveness"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ringfingerThresholdEditText" />

        <EditText
            android:id="@+id/littlefingerThresholdEditText"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/littlefingerThresholdTextView" />

        <LinearLayout
            android:id="@+id/spinner_zoom_ratios_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/littlefingerThresholdEditText">

            <TextView
                android:id="@+id/text_zoom_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Zoom Ratio"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spinner_zoom_ratios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/zoom_ratios_array"
                android:spinnerMode="dropdown" />

        </LinearLayout>

        <Button
            android:id="@+id/submitButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="32dp"
            android:text="Submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinner_zoom_ratios_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>